packages/shared/src/styles/base.css
/* ... */
@keyframes pulse {
  0% {
    width: 100%;
    height: 100%;
    opacity: 0;
  }

  5% {
    top: -0.25rem;
    left: -0.25rem;
    width: calc(100% + 0.5rem);
    height: calc(100% + 0.5rem);

    opacity: 1;
  }

  100% {
    top: -1rem;
    left: -1.25rem;
    width: calc(100% + 2.5rem);
    height: calc(100% + 2rem);
    opacity: 0;
    border-radius: 44px;
  }
}

.highlight-pulse {
  position: relative;

  &::before {
    @apply border-accent-cabbage-default;
    content: '';
    z-index: -1;
    position: absolute;
    opacity: 0;
    inset: 0;
    border-width: 4px;
    animation: pulse 1.25s infinite;
    border-radius: 14px;
  }
}

.drawer-padding {
  padding-bottom: max(env(safe-area-inset-bottom, 0.75rem), 0.75rem);
}

.footer-navbar {
  min-height: $navBarHeight;
  grid-column-gap: 0.5rem;
  padding-bottom: max(env(safe-area-inset-bottom, 0.5rem), 0.5rem);
}

.hide-ms-reveal::-ms-reveal {
  display: none;
}

meter::-webkit-meter-bar {
  background: transparent;
  border: 0;
}

.bg-gradient-funnel {
  &-default {
    background: radial-gradient(100% 22.49% at 100% -10%, var(--theme-accent-cabbage-default) 0%, var(--theme-accent-cabbage-baseline) 100%),
    radial-gradient(100% 22.49% at 0% -10%, var(--theme-accent-onion-default) 0%, var(--theme-accent-onion-baseline) 100%);
  }

  &-top {
    background: radial-gradient(192.5% 100% at 50% 0%, var(--theme-accent-cabbage-default) 0%, var(--theme-accent-onion-default) 50%, var(--theme-accent-onion-baseline) 100%);
  }

  &-circle {
    background: radial-gradient(94% 48.83% at 50% 0%, var(--theme-accent-cabbage-default) 0%, var(--theme-accent-onion-default) 75.12%, var(--theme-accent-onion-baseline) 100%);
  }

  &-hourglass {
    background: radial-gradient(192.5% 100% at 50% 100%, var(--theme-accent-cabbage-default) 0%, var(--theme-accent-cabbage-baseline) 50%),
    radial-gradient(192.5% 100% at 50% 0%, var(--theme-accent-onion-default) 0%, var(--theme-accent-onion-baseline) 50%);
  }

  &-best-price {
    background: linear-gradient(135deg, #E769FB 0%, #9E70F8 44.71%, #68A6FD 100%);
  }
}

@layer utilities {
  @keyframes full-sequence {
    0% {
      transform: scale(0);
    }
    20% {
      transform: scale(1.2);
    }
    40% {
      transform: scale(1);
    }
    70% {
      transform: scale(1.4);
    }
    100% {
      transform: scale(0);
    }
  }

  .award-animation {
    animation: full-sequence 1s ease-in-out forwards;
  }

  @keyframes float {
    0%, 100% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-5px);
    }
  }

  .float-animation {
    animation: float 1.5s ease-in-out infinite;
  }
}

